<resources>
    <string name="app_name">大水库</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="summary">Dashui Collection :)</string>
    <string name="title_activity_buttons">ButtonsActivity</string>
    <string name="title_activity_tmp">临时测试页面</string>
    <string name="title_activity_shake">摇一摇</string>
    <string name="title_activity_map">地图</string>
    <string name="title_activity_gps">GPS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="guideview_self_title">我是谁？</string>
    <string name="guideview_self_content">我是王大水，一名互联网的搬运工！</string>
    <string name="guideview_like_title">我喜欢？</string>
    <string name="guideview_like_content">我喜欢旅行、骑车、徒步！</string>
    <string name="guideview_this_title">这里是？</string>
    <string name="guideview_this_content">这里是互联网的一个小小收藏库！</string>
    <string name="guideview_say">&#160;一个人时\n\n&#160;善待自己</string>
    <string name="drawer_view">视图组件</string>
    <string name="drawer_tools">工具集合</string>
    <string name="drawer_others">其他效果</string>
    <string name="drawer_design">设计案例</string>
    <string name="drawer_third_party">第三方库</string>
    <string name="drawer_tmp">临时页面</string>
    <string name="view_button">按钮</string>
    <string name="view_edittext">输入</string>
    <string name="view_progress">进度</string>
    <string name="view_image">图片</string>
    <string name="view_chart">图表</string>
    <string name="view_dialog">对话框</string>
    <string name="tools_qrcode">二维码</string>
    <string name="tools_qrcode_dialog_title">二维码扫描结果</string>
    <string name="tools_photo">照片</string>
    <string name="tools_photo_dialog_camera">拍照</string>
    <string name="tools_photo_dialog_album">从相册选取</string>
    <string name="tools_photo_dir">weytest</string>
    <string name="tools_photo_album">dcim</string>
    <string name="tools_date">日期</string>
    <string name="tools_shake">摇一摇</string>
    <string name="tools_shake_back_text">摇一摇有惊喜哦！</string>
    <string name="tools_map">地图</string>
    <string name="tools_gps">GPS</string>
    <string name="tools_gps_select_mode_title">定位模式</string>
    <string name="tools_gps_select_mode_radio_high">高精度</string>
    <string name="tools_gps_select_mode_radio_low">低功耗</string>
    <string name="tools_gps_select_mode_radio_device">仅设备</string>
    <string name="tools_gps_select_coordinate_title">坐标系</string>
    <string name="tools_gps_select_coordinate_gcj02">gcj02(国测局加密经纬度坐标)</string>
    <string name="tools_gps_select_coordinate_bd09ll">bd09ll(百度加密经纬度坐标)</string>
    <string name="tools_gps_select_coordinate_bd09">bd09(百度加密墨卡托坐标)</string>
    <string name="tools_gps_frequence">定位时间间隔（ms）：</string>
    <string name="tools_gps_geofencelog">反地理编码</string>
    <string name="tools_gps_start">开始定位</string>
    <string name="tools_gps_stop">停止定位</string>
    <string name="tools_gps_select_mode_hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="tools_gps_select_mode_saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="tools_gps_select_mode_device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="toools_developing">该功能正在开发中</string>
    <string name="animation_pou_button">弹出按钮</string>
    <string name="animation_pop_button_summary">类似&#160;Path&#160;一样的弹出卫星菜单，或者直线方向弹出。</string>
    <string name="animation_swipe_list">列表滑出</string>
    <string name="animation_swipe_list_meili_title">梅里日照金山</string>
    <string name="animation_swipe_list_meili_intro">照片拍摄于2015年5月1日，梅里雪山和西藏的冈仁波齐、青海的阿尼玛卿山、青海的尕朵觉沃并称为藏传佛教四大神山。</string>
    <string name="animation_swipe_list_guaishulin_title">怪树林日落</string>
    <string name="animation_swipe_list_guaishulin_intro">怪树林在额济纳旗达来呼布镇西南28公里处，苍凉的“怪树林”，据说是黑将军及众将士不死的灵魂所在。</string>
    <string name="animation_swipe_list_juyanhai_title">居延海日出</string>
    <string name="animation_swipe_list_juyanhai_intro">位于内蒙古自治区阿拉善盟额济纳旗北部，汉代称“居延泽”，后也称“西海”，唐代以来一直称“居延海”。是穿越巴丹吉林沙漠和大戈壁通往漠北的重要通道。古代认为这里就是《尚书》所谓的“流沙”[1]。目前，东居延海为国家级水利风景区。</string>
    <string name="animation_swipe_list_haigeng_title">海埂红嘴鸥</string>
    <string name="animation_swipe_list_haigeng_intro">红嘴鸥（学名：Larus ridibundus），俗称“水鸽子”，体形和毛色都与鸽子相似，体长37-43厘米，翼展94-105厘米，体重225-350克，寿命32年。嘴和脚皆呈红色，身体大部分的羽毛是白色，尾羽黑色。</string>
    <string name="animation_swipe_list_huyang_title">胡杨林</string>
    <string name="animation_swipe_list_huyang_intro">胡杨是落叶中型天然乔木，直径可达1.5米，木质纤细柔软，树叶阔大清香。耐旱耐涝，生命顽强，是自然界稀有的树种之一。</string>
    <string name="animation_circle_menu">圆形菜单</string>
    <string name="design_null_app_error">此设计案例并未安装</string>
    <string name="third_party_null_error">此应用并未安装</string>
    <string name="third_party_fab">Fab</string>
    <string name="third_party_mpchart">MPChart</string>
    <string name="third_party_progressbar">ProgressBar</string>
    <string name="third_party_wave_swipe">WaveSwipe</string>
    <string name="third_party_editext">EditText</string>
    <string name="third_party_span">Span</string>
    <string name="button_standard">标准按钮</string>
    <string name="button_standard_en">STANDARD BUTTON</string>
    <string name="button_border">圆角边框透明按钮</string>
    <string name="button_border_en">BORDER_BUTTON</string>
    <string name="button_borderless">无边框按钮</string>
    <string name="button_borderless_en">BORDERLESS_BUTTON</string>
    <string name="button_paper">自定义按钮</string>
    <string name="button_paper_en">PAPER_BUTTON</string>
    <string name="button_material">Material按钮</string>
    <string name="button_material_en">MATERIAL_BUTTON</string>
    <string name="button_tintable">Tintable按钮</string>
    <string name="button_text_circle">圆形文字按钮</string>
    <string name="button_text_circle_en">CIRCLE BUTTON</string>
    <string name="button_icon_circle">圆形图标按钮</string>
    <string name="edittext_standard">标准输入框</string>
    <string name="edittext_standard_en">stander edittext</string>
    <string name="edittext_border_corner">圆角输入框</string>
    <string name="edittext_border_corner_en">border corner edittext</string>
    <string name="edittext_clear">可清除的输入框</string>
    <string name="edittext_clear_en">clear edittext</string>
    <string name="progress_standard">标准进度条</string>
    <string name="progress_standard_horizontal">标准水平进度条</string>
    <string name="progress_standard_horizontal_de">标准确定水平进度条</string>
    <string name="progress_custom">自定义进度条</string>
    <string name="progress_number_horizontal">数字水平进度条</string>
    <string name="progress_number_round">数字圆形进度条</string>
    <string name="imageview_standard">标准图片</string>
    <string name="chart_line">线形图表</string>
    <string name="chart_pie">饼形图表</string>
    <string name="chart_bar">柱状图表</string>
    <string name="dialog_title">对话框标题</string>
    <string name="dialog_content_short">本应用主要用于常用组件的展示。</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_agree">Agree</string>
    <string name="dialog_disagree">Disagree</string>
    <string name="dialog_more_info">More Info</string>
    <string name="dialog_useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="dialog_loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat. Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet, id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed varius nisl at imperdiet facilisis.</string>
    <string name="dialog_basic_no_title">基础类型（不包含标题）</string>
    <string name="dialog_basic">基础类型</string>
    <string name="dialog_basic_long_content">基础类型（长内容）</string>
    <string name="dialog_basic_icon">基础类型（图标）</string>
    <string name="dialog_stack">堆栈式对话框</string>
    <string name="dialog_callback">回调对话框</string>
    <string name="dialog_list">列表对话框</string>
    <string name="dialog_list_long">长列表对话框</string>
    <string name="dialog_single_choice">单选对话框</string>
    <string name="dialog_multiple_choice">多选对话框</string>
    <string name="dialog_simple_choice">简单对话框</string>
    <string name="dialog_custom_view">自定义对话框</string>
    <string name="dialog_custom_webview">WebView对话框</string>
    <string name="dialog_custom_color_chooser">颜色选择对话框</string>
    <string name="dialog_theme">主题对话框</string>
    <string name="dialog_input">输入对话框</string>
    <string name="dialog_progress_indeterminate_circle">普通进度提示对话框</string>
    <string name="dialog_progress_indeterminate_horizontal">水平进度提示对话框</string>
    <string name="dialog_progress_determinate">Determinate进度提示对话框</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>
    <string name="changelog">Changelog</string>
    <string name="color_chooser">Color Chooser</string>
    <string name="input_hint">John Appleseed</string>
    <string name="input_content">What\'s your name?</string>
    <string name="submit">Submit</string>
    <string name="input_content_custominvalidation">Do not type hello, or else!</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="please_wait">Please wait…</string>
    <string name="done">Done!</string>
    <string-array name="dialog_socialNetworks">
        <item>Twitter</item>
        <item>Google+</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>
</resources>